CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT(HelloWorld)

message(STATUS "PROJECT_BINARAY_DIR: ${PROJECT_BINARAY_DIR}")

#set(LIBRARY_OUTPUR_PATH ${PROJECT_BINARAY_DIR}/lib)
#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARAY_DIR}/bin)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(hello SHARED hello.cpp)
ADD_EXECUTABLE(greet main.cpp)
TARGET_LINK_LIBRARIES(greet hello)
